# spark-text-similarity

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: README.md
docs/: README.md
docs/en/: CASE_STUDY.md  EXECUTIVE_SUMMARY.md  MATHEMATICAL_FORMULAS.md  PIPELINE_EXPLAINED.md  TECHNICAL_APPENDIX.md
docs/es/: CASE_STUDY.md  EXECUTIVE_SUMMARY.md  MATHEMATICAL_FORMULAS.md  PIPELINE_EXPLAINED.md  TECHNICAL_APPENDIX.md
reports/: results.md
scripts/: run_experiments.py  run_pipeline.py
src/: __init__.py  data_generator.py  experiments.py  jaccard.py  lsh.py  minhash.py  pipeline.py  shingling.py  visualizations.py
tests/: __init__.py  conftest.py  test_jaccard.py  test_lsh.py  test_minhash.py  test_pipeline.py  test_shingling.py
